--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,16 @@
 .App {
   text-align: center;
-  background-color: #8e8dbe
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  height: 100vh;
+  display:flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  color:#ffffff;
+  padding: 16px 0;
+  font-weight: 500;
+  font-size: 2rem;
+  font-family: 'Poppins', sans-serif;
 }
